--- a/relinksys/web/src/app/inventory/ip-address/ip-address.component.html
+++ b/relinksys/web/src/app/inventory/ip-address/ip-address.component.html
@@ -34,9 +34,9 @@
 
                                 <div class="col-xl-4 col-lg-4 col-md-4 col-12 mb-3">
                                     <button type="submit" class="me-3" mat-raised-button color="primary"
-                                        [disabled]="!f.valid || disabledBtn">Save</button>
+                                        [disabled]="!f.valid || disabledBtn"><span class="first-letter">S</span>ave</button>
                                     <button class="me-3" type="button" mat-raised-button color="primary"
-                                        [disabled]="!disabledBtn" (click)="update()">Update</button>
+                                        [disabled]="!disabledBtn" (click)="update()"><span class="first-letter">U</span>pdate</button>
                                 </div>
                             </div>
 
