--- a/relinksys/web/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.css
+++ b/relinksys/web/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.css
@@ -69,3 +69,7 @@ background: none;
   padding: 0;
   margin: 0;
 }
+
+.first-letter {
+    color: #fff201; /* Color for the first letter on hover */
+  }
