--- a/relinksys/web/src/app/company-payment/expense/expense.component.css
+++ b/relinksys/web/src/app/company-payment/expense/expense.component.css
@@ -12,3 +12,7 @@
   .mat-select-disabled .mat-select-value {
     color: rgb(0 0 0) !important;
 }
+
+ .first-letter {
+  color: #fff201; /* Color for the first letter on hover */
+}
