--- a/relinksys/web/src/app/company-payment/payment/payment.component.html
+++ b/relinksys/web/src/app/company-payment/payment/payment.component.html
@@ -185,7 +185,7 @@
                                 </div>
                                 <div class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <button [disabled]="!f.valid || myControl1.value == ''" type="submit" mat-raised-button color="primary">
-                                        Payment </button>
+                                        P<span class="first-letter">a</span>yment </button>
                                 </div>
                             </div>
                         </form>
