--- a/relinksys/web/src/app/company-payment/petty-cash/petty-cash.component.html
+++ b/relinksys/web/src/app/company-payment/petty-cash/petty-cash.component.html
@@ -180,9 +180,9 @@
                     
                         <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                             <button type="submit" *ngIf="suBtn === false" (click)="onsubmit()" class="me-3" mat-raised-button color="primary"
-                            [disabled]=!f.valid>Save</button>
+                            [disabled]=!f.valid><span class="first-letter">S</span>ave</button>
                         <button type="button" *ngIf="suBtn === true" (click)="updatePetty()" class="me-3" mat-raised-button
-                            color="primary" [disabled]=!f.valid>Update</button>
+                            color="primary" [disabled]=!f.valid><span class="first-letter">U</span>pdate</button>
                         <button type="button" mat-raised-button> Cancel</button>
                         </div>
                     </div>
