--- a/relinksys/web/src/app/po/quotation/quotation.component.html
+++ b/relinksys/web/src/app/po/quotation/quotation.component.html
@@ -301,7 +301,7 @@
                                 <div  class="col-xl-1 col-lg-1 col-md-1 col-4 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false " class="mr-3" type="submit"
                                         [disabled]="(!f1.valid || item.Quantity == 0 && this.GstTypeDis) || this.specList == ''"
-                                        mat-raised-button color="primary" >Add</button>
+                                        mat-raised-button color="primary" ><span class="first-letter">A</span>dd</button>
                                     <!-- <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]=" item.Quantity == 0"
                                         mat-raised-button color="primary" (click)="editUpdate()">Update</button> -->
                                 </div>
@@ -463,14 +463,14 @@
                                 
                                 <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0 ml-auto">
                                     <button  [disabled]="itemList.length == 0 || id != 0" mat-raised-button
-                                        color="primary">Save
+                                        color="primary"><span class="first-letter">S</span>ave
                                     </button>
                                 </div>
                                 <div *ngIf="selectedPurchaseMaster.ID !== null"
                                     class="col-xl-1 col-lg-1 col-md-2 col-sm-12 col-4  mb-0 mr-2">
                                     <button type="button"
                                     [disabled]="itemList.length === 0 || this.disbaleupdate === true"
-                                    (click)="updatedPurchase()" mat-raised-button color="primary">Update</button>
+                                    (click)="updatedPurchase()" mat-raised-button color="primary"><span class="first-letter">U</span>pdate</button>
                                 </div>
                             </div>
                             <!-- Total calculcation end -->
