--- a/relinksys/web/src/app/sale/billing/billing.component.html
+++ b/relinksys/web/src/app/sale/billing/billing.component.html
@@ -3680,10 +3680,10 @@
                  <div style="overflow-x: auto;">
   <table style="width:100%; table-layout: fixed;">
     <tbody>
-      <tr style="background:#d7deff">
+      <tr style="background:#c6c6c6">
         <th colspan="10">SPH</th>
-        <th colspan="1" style="background:#82f588; text-align: center; cursor: pointer;" (click)="setSign('SPH', '+', 'RE')">+</th>
-        <th colspan="1" style="background:#fa6d6d; text-align: center; cursor: pointer;" (click)="setSign('SPH', '-', 'RE')">-</th>
+        <th colspan="1" style="background:#31a136; text-align: center; cursor: pointer; color:#fff" (click)="setSign('SPH', '+', 'RE')">+</th>
+        <th colspan="1" style="background:#c12121; text-align: center; cursor: pointer; color:#fff" (click)="setSign('SPH', '-', 'RE')">-</th>
       </tr>
       <tr *ngFor="let row of sphValues">
         <td *ngFor="let val of row" style="cursor:pointer; border:1px solid #b7b7b7"
@@ -3699,10 +3699,10 @@
 <div style="overflow-x: auto; margin-top: 10px;">
   <table style="width:100%; table-layout: fixed;">
     <tbody>
-      <tr style="background:#d7deff">
+      <tr style="background:#c6c6c6">
         <th colspan="10">CYL</th>
-        <th colspan="1" style="background:#82f588; text-align: center; cursor: pointer;" (click)="setSign('CYL', '+', 'RE')">+</th>
-        <th colspan="1" style="background:#fa6d6d; text-align: center; cursor: pointer;" (click)="setSign('CYL', '-', 'RE')">-</th>
+        <th colspan="1" style="background:#31a136; text-align: center; cursor: pointer;color:#fff" (click)="setSign('CYL', '+', 'RE')">+</th>
+        <th colspan="1" style="background:#c12121; text-align: center; cursor: pointer;color:#fff" (click)="setSign('CYL', '-', 'RE')">-</th>
       </tr>
       <tr *ngFor="let row of cylValues">
         <td *ngFor="let val of row" style="cursor:pointer; border:1px solid #b7b7b7"
@@ -3719,7 +3719,7 @@
 <div style="overflow-x: auto; margin-top: 10px;">
   <table style="width:100%; table-layout: fixed;">
     <tbody>
-      <tr style="background:#d7deff">
+      <tr style="background:#c6c6c6">
         <th colspan="12">AXIS</th>
       </tr>
       <tr *ngFor="let row of asixValues">
@@ -3734,7 +3734,7 @@
  <div style="overflow-x: auto; margin-top: 10px;">
     <table style="width:100%; table-layout: fixed;">
       <tbody>
-        <tr style="background:#d7deff">
+        <tr style="background:#c6c6c6">
           <th colspan="14">ADD</th>
         </tr>
         <tr *ngFor="let row of addValues">
@@ -3767,7 +3767,7 @@
 <div style="overflow-x: auto; margin-top: 10px;">
   <table style="width:100%; table-layout: fixed;">
     <tbody>
-      <tr style="background:#d7deff">
+      <tr style="background:#c6c6c6">
         <th colspan="12">VA (DV)</th>
       </tr>
       <tr *ngFor="let row of vaDvValues">
@@ -3783,7 +3783,7 @@
 <div style="overflow-x: auto; margin-top: 10px;">
   <table style="width:100%; table-layout: fixed;">
     <tbody>
-      <tr style="background:#d7deff">
+      <tr style="background:#c6c6c6">
         <th colspan="12">VA (NV)</th>
       </tr>
       <tr *ngFor="let row of vaNvValues">
@@ -3809,10 +3809,10 @@
   <div style="overflow-x: auto;">
     <table style="width:100%; table-layout: fixed;">
       <tbody>
-        <tr style="background:#d7deff">
+        <tr style="background:#c6c6c6">
           <th colspan="10">SPH</th>
-          <th colspan="1" style="background:#82f588; text-align: center; cursor: pointer;" (click)="setSign('SPH', '+', 'LE')">+</th>
-          <th colspan="1" style="background:#fa6d6d; text-align: center; cursor: pointer;" (click)="setSign('SPH', '-', 'LE')">-</th>
+          <th colspan="1" style="background:#31a136; text-align: center; cursor: pointer;color:#fff" (click)="setSign('SPH', '+', 'LE')">+</th>
+          <th colspan="1" style="background:#c12121; text-align: center; cursor: pointer;color:#fff" (click)="setSign('SPH', '-', 'LE')">-</th>
         </tr>
         <tr *ngFor="let row of sphValues">
           <td *ngFor="let val of row" style="cursor:pointer; border:1px solid #b7b7b7"
@@ -3828,10 +3828,10 @@
   <div style="overflow-x: auto; margin-top: 10px;">
     <table style="width:100%; table-layout: fixed;">
       <tbody>
-        <tr style="background:#d7deff">
+        <tr style="background:#c6c6c6">
           <th colspan="10">CYL</th>
-          <th colspan="1" style="background:#82f588; text-align: center; cursor: pointer;" (click)="setSign('CYL', '+', 'LE')">+</th>
-          <th colspan="1" style="background:#fa6d6d; text-align: center; cursor: pointer;" (click)="setSign('CYL', '-', 'LE')">-</th>
+          <th colspan="1" style="background:#31a136; text-align: center; cursor: pointer;color:#fff" (click)="setSign('CYL', '+', 'LE')">+</th>
+          <th colspan="1" style="background:#c12121; text-align: center; cursor: pointer;color:#fff" (click)="setSign('CYL', '-', 'LE')">-</th>
         </tr>
         <tr *ngFor="let row of cylValues">
           <td *ngFor="let val of row" style="cursor:pointer; border:1px solid #b7b7b7"
@@ -3847,7 +3847,7 @@
   <div style="overflow-x: auto; margin-top: 10px;">
     <table style="width:100%; table-layout: fixed;">
       <tbody>
-        <tr style="background:#d7deff">
+        <tr style="background:#c6c6c6">
           <th colspan="12">AXIS</th>
         </tr>
         <tr *ngFor="let row of asixValues">
@@ -3862,7 +3862,7 @@
   <div style="overflow-x: auto; margin-top: 10px;">
     <table style="width:100%; table-layout: fixed;">
       <tbody>
-        <tr style="background:#d7deff">
+        <tr style="background:#c6c6c6">
           <th colspan="14">ADD</th>
         </tr>
         <tr *ngFor="let row of addValues">
@@ -3896,7 +3896,7 @@
 <div style="overflow-x: auto; margin-top: 10px;">
   <table style="width:100%; table-layout: fixed;">
     <tbody>
-      <tr style="background:#d7deff">
+      <tr style="background:#c6c6c6">
         <th colspan="12">VA (DV)</th>
       </tr>
       <tr *ngFor="let row of vaDvValues">
@@ -3912,7 +3912,7 @@
 <div style="overflow-x: auto; margin-top: 10px;">
   <table style="width:100%; table-layout: fixed;">
     <tbody>
-      <tr style="background:#d7deff">
+      <tr style="background:#c6c6c6">
         <th colspan="12">VA (NV)</th>
       </tr>
       <tr *ngFor="let row of vaNvValues">
