--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -299,6 +299,7 @@
                                                                     <mat-option value="8">EYSTELLA INTERNATIONAL PRIVATE LIMITED</mat-option>
                                                                     <mat-option value="9">Regular Barcode With Logo</mat-option>
                                                                     <mat-option value="10">A4 Barcode</mat-option>
+                                                                    <mat-option value="11">Offer Barcode</mat-option>
                                                                 </mat-select>
                                                                 <mat-error>Bill Format </mat-error>
                                                             </mat-form-field>
