--- a/relinksys/web/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/relinksys/web/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -495,12 +495,9 @@
                                                 <th>TAXAmt</th>
                                                 <th>TAXType</th>
                                                 <th>TotalAmt</th>
-                                                <th
-                                                    *ngIf="company.RetailPrice === 'true' || shop.RetailBill === 'true'">
-                                                    SalePrice/Unit</th>
-                                                <th
-                                                    *ngIf="company.WholeSale === 'true' || shop.WholesaleBill === 'true'">
-                                                    WholeSalePrice/Unit</th>
+                                                <th *ngIf="company.RetailPrice === 'true' || shop.RetailBill === 'true'"> SalePrice/Unit</th>
+                                                <th style="color:red !important">PriceCut</th>
+                                                <th *ngIf="company.WholeSale === 'true' || shop.WholesaleBill === 'true'"> WholeSalePrice/Unit</th>
                                                 <th>Brand</th>
                                             </tr>
                                         </thead>
@@ -656,6 +653,14 @@
                                                         (blur)="calculateFields1('','',data)" #name="ngModel"
                                                         [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                 </td>
+                                                 <td 
+                                                        style=" width:60px;text-align: center;">
+                                                        <input style=" width:60px;text-align: center; border:1px solid red" min="0"
+                                                            type="number" [(ngModel)]="data.PriceCut"
+                                                            (ngModelChange)="data.PriceCut = onChange($event)"
+                                                             #name="ngModel"
+                                                            [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                    </td>
                                                 <td *ngIf="!data.UpdateProduct && company.WholeSale === 'true' || shop.WholesaleBill === 'true' "
                                                     class="text-center"
                                                     [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
